SUFFIXES =
include $(top_srcdir)/src/rc-build.mk
include $(top_srcdir)/src/lib-build.mk

INCLUDES 						= $(default_includes)
EXTRA_DIST 						= Headers

noinst_LIBRARIES				= libwcppwidget.a

libwcppwidget_a_SOURCES			=						\
	 							  Widget.cpp

pkginclude_HEADERS				= 						\
								  Widget.h
